// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: SubmitButton ui with all optional params: Component: SubmitButton => ui => with all optional params 1`] = `
<Button
  className="extra-css-class"
  color="primary"
  icon="360"
  inProgress={true}
  onClick={[Function]}
  size="lg"
  type="submit"
>
  Submit
</Button>
`;

exports[`Component: SubmitButton ui with all required props: Component: SubmitButton => ui => with all required props 1`] = `
<Button
  color="primary"
  icon="save"
  inProgress={true}
  onClick={[Function]}
  type="submit"
>
  Submit
</Button>
`;
